# Guba-e---Ethiopian-Legal-Advisor

./: .gitignore  index.html  main.py  pyproject.toml  script.js  style.css
.github/workflows/: static.yml
admin-tools/: ingestor.py  vectordb.py
back-end/: generator.py  ingestor.py  main.py  schema.py
front-end/: index.html  script.js  style.css
