[project]
name = "guba-e-ethiopian-legal-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
]
